# crashDay

./: CMakeLists.txt  readme.md  version.cmake
doc/doxygen/: customdoxygen.css
packaging/: CMakeLists.txt
source/: CMakeLists.txt  version.cpp.in  version.h
source/coroAssert/: CMakeLists.txt  SomeClass.cpp  SomeClass.h  main.cpp
